tests/samples/negative/pointers/implicit_pointer_const.ax
module implicit_pointer_const;

fn accept_mut(ptr: *mut i32) -> i32 {
    *ptr = 2;
    return *ptr;
}

fn main() -> i32 {
    var value: i32 = 1;
    let ptr: *const i32 = &value;
    return accept_mut(ptr);
}
